# email-cli

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md
.github/workflows/: ci.yml
src/: main.rs
