[package]
name = "email_cli"
version = "0.1.0"
edition = "2021"
description = "A simple email management CLI tool"
authors = ["Xiaoyang Han <lux1an@qq.com>"]

[dependencies]
# CLI interface
clap = { version = "4.4", features = ["derive"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Directories
dirs = "5.0"
# IMAP for receiving emails (minimal)
imap = "2.4"
# SMTP for sending emails (minimal)
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
